Add proper configuration for K3s cluster VMs
Added the ability to specify the following parameters for each VM:
- Proxmox node
- Proxmox storage pool
- Static IP address

This allows for potentially unlimited horizontal scaling, and fixes the
DHCP issues (K3s doesn't support dynamic IP for nodes).

--- a/vars.template/secret.yml
+++ b/vars.template/secret.yml
@@ -1,3 +1,4 @@
+# yamllint disable rule:comments-indentation
 ---
 # Proxmox Authentication
 proxmox:
@@ -10,6 +11,7 @@ globalVars:
   net:
     dnsServers: [ "1.1.1.1", "1.0.0.1" ]
     domainRoot: homelab.internal
+    gateway: 192.168.1.254
   ssh:
     pubKeyFile: ~/.ssh/id_ed25519.pub
   timezone: America/Vancouver
@@ -24,10 +26,45 @@ dirsrv:
 
 k3s:
   controller:
-    # Desired static IP of the control-plane load balancer
-    load_balancer_ip: 192.168.1.11
+
+    # Static IP to assign to the load balancer
+    load_balancer_ip: 192.168.1.20
+
     # 32 character alpha-numeric string
     node_token: 'Tx0HcpfyMZb8oVJ6NNTwLcSjba5jMQHR'
+
+    # Define your control-plane nodes:
+    #  - For a single master, just define one node.
+    #  - For HA, you must define a minimum of three nodes.
+    #  - Nodes must be given static IP addresses in CIDR notation.
+    nodes:
+      0:
+        ip_addr: 192.168.1.21
+        pve_node: pve1
+        pve_storage_pool: local-zfs
+      # 1:
+      #   ip_addr: 192.168.1.22
+      #   pve_node: pve1
+      #   pve_storage_pool: local-zfs
+      # 2:
+      #   ip_addr: 192.168.1.23
+      #   pve_node: pve1
+      #   pve_storage_pool: local-zfs
+
+  # Define your worker nodes:
+  #  - You must define a minimum of one node.
+  #  - For HA, you must define a minimum of two nodes.
+  #  - Nodes must be given static IP addresses in CIDR notation.
+  worker:
+    nodes:
+      0:
+        ip_addr: 192.168.1.31
+        pve_node: pve1
+        pve_storage_pool: local-zfs
+      1:
+        ip_addr: 192.168.1.32
+        pve_node: pve1
+        pve_storage_pool: local-zfs
 
 pushover:
   # TODO: Implement enabled/disabled toggle
