Implement ceph-csi-cephfs storage for K3s cluster

--- a/vars.template/secret.yml
+++ b/vars.template/secret.yml
@@ -25,6 +25,10 @@ dirsrv:
     passwd: "p4$Sw0Rd"
 
 k3s:
+  ceph:
+    adminID: admin
+    adminKey: AQCZIv1iyPddAxAAwlhKDUZlzg0pcbost162gA==
+
   controller:
 
     # Static IP to assign to the load balancer
