--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 ---
 default:
-  image: alpine:latest
+  image: alpine:3.16
   tags:
     - private-cluster
   interruptible: true
@@ -28,7 +28,7 @@ variables:
   PKR_ROOT: ${CI_PROJECT_DIR}/templates
   PACKER_PLUGIN_PATH: "${CI_PROJECT_DIR}/.packer/plugins"
   TF_ROOT: ${CI_PROJECT_DIR}/infra
-  TF_STATE_NAME: staging
+  TF_STATE_NAME: production
 
 terraform:init:
   stage: prepare
@@ -78,6 +78,8 @@ terraform-validate:
 plan-infrastructure:
   stage: build
   image: registry.gitlab.com/gitlab-org/terraform-images/releases/terraform:1.2.6
+  environment:
+    name: production
   script:
     - cat ${SSH_PUBKEY_FILE} > ${CI_PROJECT_DIR}/ssh_key.pub
     - cd ${TF_ROOT}
@@ -91,6 +93,8 @@ plan-infrastructure:
 
 build-templates:
   stage: build
+  environment:
+    name: production
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       changes:
@@ -105,9 +109,9 @@ build-templates:
 
 apply-infrastructure:
   stage: deploy
-  environment:
-    name: staging
   image: registry.gitlab.com/gitlab-org/terraform-images/releases/terraform:1.2.6
+  environment:
+    name: production
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: manual
