Fix: Remove GitLab Agent token default value
Make variable part of configuration in `/vars`, instead of having
a hardcoded default.

--- a/vars.template/secret.yml
+++ b/vars.template/secret.yml
@@ -7,6 +7,9 @@ proxmox:
   apiTokenSecret: "00000000-0000-0000-0000-000000000000"
   tlsInsecure: false
 
+gitlab:
+  agentToken: token-goes-here
+
 globalVars:
   net:
     dnsServers: [ "1.1.1.1", "1.0.0.1" ]
