Have Argo CD deploy 389ds again

--- a/cluster/gitlab-managed/argocd/gitops-config.yaml
+++ b/cluster/gitlab-managed/argocd/gitops-config.yaml
@@ -11,7 +11,7 @@ spec:
         revision: feature/k8s-rework
         directories:
           - path: cluster/system/*
-          # - path: cluster/platform/*
+          - path: cluster/platform/*
   template:
     metadata:
       name: '{{path.basename}}'
