--- a/cluster/platform/389ds/templates/storage.yaml
+++ b/cluster/platform/389ds/templates/storage.yaml
@@ -5,7 +5,7 @@ metadata:
   name: 389ds-data
   namespace: 389ds
 spec:
-  storageClassName: longhorn
+  storageClassName: csi-cephfs-sc
   accessModes:
     - ReadWriteOnce
   resources:
