Manage system apps with gitlab-agent

--- a/.gitlab/agents/gitlab-k3s/config.yaml
+++ b/.gitlab/agents/gitlab-k3s/config.yaml
@@ -4,5 +4,7 @@ gitops:
     - id: ralgar/homelab
       default_namespace: default
       paths:
-        - glob: '/cluster/gitlab-managed/**/*.{yaml,yml,json}'
+        - glob: '/cluster/gitlab-managed/system/**/*.{yaml,yml,json}'
+        - glob: '/cluster/gitlab-managed/gitlab-runner/*.{yaml,yml,json}'
+        # - glob: '/cluster/gitlab-managed/**/*.{yaml,yml,json}'
       dry_run_strategy: none
