--- a/cluster/gitlab-managed/system/ceph-csi-cephfs/csi-cephfsplugin-provisioner.yaml
+++ b/cluster/gitlab-managed/system/ceph-csi-cephfs/csi-cephfsplugin-provisioner.yaml
@@ -14,7 +14,6 @@ spec:
       port: 8080
       protocol: TCP
       targetPort: 8681
-
 ---
 kind: Deployment
 apiVersion: apps/v1
@@ -45,16 +44,14 @@ spec:
       priorityClassName: system-cluster-critical
       containers:
         - name: csi-provisioner
-          image: registry.k8s.io/sig-storage/csi-provisioner:v3.2.1
+          image: k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0
           args:
             - "--csi-address=$(ADDRESS)"
-            - "--v=1"
+            - "--v=5"
             - "--timeout=150s"
             - "--leader-election=true"
             - "--retry-interval-start=500ms"
             - "--feature-gates=Topology=false"
-            - "--feature-gates=HonorPVReclaimPolicy=true"
-            - "--prevent-volume-mode-conversion=true"
             - "--extra-create-metadata=true"
           env:
             - name: ADDRESS
@@ -64,15 +61,14 @@ spec:
             - name: socket-dir
               mountPath: /csi
         - name: csi-resizer
-          image: registry.k8s.io/sig-storage/csi-resizer:v1.5.0
+          image: k8s.gcr.io/sig-storage/csi-resizer:v1.4.0
           args:
             - "--csi-address=$(ADDRESS)"
-            - "--v=1"
+            - "--v=5"
             - "--timeout=150s"
             - "--leader-election"
             - "--retry-interval-start=500ms"
             - "--handle-volume-inuse-error=false"
-            - "--feature-gates=RecoverVolumeExpansionFailure=true"
           env:
             - name: ADDRESS
               value: unix:///csi/csi-provisioner.sock
@@ -81,13 +77,12 @@ spec:
             - name: socket-dir
               mountPath: /csi
         - name: csi-snapshotter
-          image: registry.k8s.io/sig-storage/csi-snapshotter:v6.0.1
+          image: k8s.gcr.io/sig-storage/csi-snapshotter:v5.0.1
           args:
             - "--csi-address=$(ADDRESS)"
-            - "--v=1"
+            - "--v=5"
             - "--timeout=150s"
             - "--leader-election=true"
-            - "--extra-create-metadata=true"
           env:
             - name: ADDRESS
               value: unix:///csi/csi-provisioner.sock
@@ -95,9 +90,23 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /csi
+        - name: csi-cephfsplugin-attacher
+          image: k8s.gcr.io/sig-storage/csi-attacher:v3.4.0
+          args:
+            - "--v=5"
+            - "--csi-address=$(ADDRESS)"
+            - "--leader-election=true"
+            - "--retry-interval-start=500ms"
+          env:
+            - name: ADDRESS
+              value: /csi/csi-provisioner.sock
+          imagePullPolicy: "IfNotPresent"
+          volumeMounts:
+            - name: socket-dir
+              mountPath: /csi
         - name: csi-cephfsplugin
           # for stable functionality replace canary with latest release version
-          image: quay.io/cephcsi/cephcsi:v3.7.0
+          image: quay.io/cephcsi/cephcsi:v3.6.2
           args:
             - "--nodeid=$(NODE_ID)"
             - "--type=cephfs"
@@ -107,7 +116,6 @@ spec:
             - "--drivername=cephfs.csi.ceph.com"
             - "--pidlimit=-1"
             - "--enableprofiling=false"
-            - "--setmetadata=true"
           env:
             - name: POD_IP
               valueFrom:
@@ -137,7 +145,7 @@ spec:
             - name: keys-tmp-dir
               mountPath: /tmp/csi/keys
         - name: liveness-prometheus
-          image: quay.io/cephcsi/cephcsi:v3.7.0
+          image: quay.io/cephcsi/cephcsi:v3.6.2
           args:
             - "--type=liveness"
             - "--endpoint=$(CSI_ENDPOINT)"
