--- a/cluster/gitlab-managed/system/ceph-csi-cephfs/csi-cephfsplugin.yaml
+++ b/cluster/gitlab-managed/system/ceph-csi-cephfs/csi-cephfsplugin.yaml
@@ -28,9 +28,9 @@ spec:
           securityContext:
             privileged: true
             allowPrivilegeEscalation: true
-          image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.5.1
+          image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.4.0
           args:
-            - "--v=1"
+            - "--v=5"
             - "--csi-address=/csi/csi.sock"
             - "--kubelet-registration-path=/var/lib/kubelet/plugins/cephfs.csi.ceph.com/csi.sock"
           env:
@@ -50,7 +50,7 @@ spec:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
           # for stable functionality replace canary with latest release version
-          image: quay.io/cephcsi/cephcsi:v3.7.0
+          image: quay.io/cephcsi/cephcsi:v3.6.2
           args:
             - "--nodeid=$(NODE_ID)"
             - "--type=cephfs"
@@ -109,7 +109,7 @@ spec:
           securityContext:
             privileged: true
             allowPrivilegeEscalation: true
-          image: quay.io/cephcsi/cephcsi:v3.7.0
+          image: quay.io/cephcsi/cephcsi:v3.6.2
           args:
             - "--type=liveness"
             - "--endpoint=$(CSI_ENDPOINT)"
