Manage 389ds with gitlab-agent

--- a/.gitlab/agents/gitlab-k3s/config.yaml
+++ b/.gitlab/agents/gitlab-k3s/config.yaml
@@ -5,6 +5,7 @@ gitops:
       default_namespace: default
       paths:
         - glob: '/cluster/gitlab-managed/system/**/*.{yaml,yml,json}'
+        - glob: '/cluster/gitlab-managed/platform/**/*.{yaml,yml,json}'
         - glob: '/cluster/gitlab-managed/gitlab-runner/*.{yaml,yml,json}'
         # - glob: '/cluster/gitlab-managed/**/*.{yaml,yml,json}'
       dry_run_strategy: none
