--- a/cluster/gitlab-managed/platform/389ds/storage.yaml
+++ b/cluster/gitlab-managed/platform/389ds/storage.yaml
@@ -5,7 +5,7 @@ metadata:
   name: 389ds-data
   namespace: 389ds
 spec:
-  storageClassName: csi-cephfs-sc
+  storageClassName: csi-cephfs
   accessModes:
     - ReadWriteOnce
   resources:
