--- a/.gitlab/agents/gitlab-k3s/config.yaml
+++ b/.gitlab/agents/gitlab-k3s/config.yaml
@@ -4,8 +4,6 @@ gitops:
     - id: ralgar/homelab
       default_namespace: default
       paths:
-        - glob: '/cluster/gitlab-managed/system/**/*.{yaml,yml,json}'
-        - glob: '/cluster/gitlab-managed/platform/**/*.{yaml,yml,json}'
-        - glob: '/cluster/gitlab-managed/gitlab-runner/*.{yaml,yml,json}'
-        # - glob: '/cluster/gitlab-managed/**/*.{yaml,yml,json}'
+        - glob: '/cluster/system/**/*.{yaml,yml,json}'
+        - glob: '/cluster/platform/**/*.{yaml,yml,json}'
       dry_run_strategy: none
