Fix: Issues with post-deploy roles
- Fixed ca-trust role not running due to incorrectly named variable.
- Added 5 retries to all LDAP tasks, to prevent failures from momentary
  connectivity issues.

--- a/post-deploy/roles/dirsrv_bootstrap/tasks/authentication.yml
+++ b/post-deploy/roles/dirsrv_bootstrap/tasks/authentication.yml
@@ -7,3 +7,7 @@
       nsslapd-allow-anonymous-access: "off"
     state: exact
   notify: restart_dirsrv
+  register: result
+  retries: 5
+  delay: 1
+  until: result is not failed
