--- a/post-deploy/roles/dirsrv_bootstrap/tasks/permissions/user_read.yml
+++ b/post-deploy/roles/dirsrv_bootstrap/tasks/permissions/user_read.yml
@@ -10,3 +10,7 @@
     attributes:
       cn: user_read
     state: present
+  register: result
+  retries: 5
+  delay: 1
+  until: result is not failed
