--- a/post-deploy/roles/dirsrv_bootstrap/tasks/plugins/enable-plugins.yml
+++ b/post-deploy/roles/dirsrv_bootstrap/tasks/plugins/enable-plugins.yml
@@ -7,6 +7,10 @@
       nsslapd-pluginEnabled: "on"
     state: exact
   notify: restart_dirsrv
+  register: result
+  retries: 5
+  delay: 1
+  until: result is not failed
 
 - name: Enable Referential Integrity Plugin
   ldap_attrs:
@@ -16,6 +20,10 @@
       nsslapd-pluginEnabled: "on"
     state: exact
   notify: restart_dirsrv
+  register: result
+  retries: 5
+  delay: 1
+  until: result is not failed
 
 - name: Flush handlers
   ansible.builtin.meta: flush_handlers
