--- a/post-deploy/roles/dirsrv_bootstrap/tasks/users/default-user.yml
+++ b/post-deploy/roles/dirsrv_bootstrap/tasks/users/default-user.yml
@@ -14,6 +14,10 @@
       displayName: "{{ default_user_displayname }}"
       userPassword: "{{ default_user_passwd }}"
     state: present
+  register: result
+  retries: 5
+  delay: 1
+  until: result is not failed
 
 - name: Assert 'default' user
   ldap_attrs:
@@ -25,3 +29,7 @@
       displayName: "{{ default_user_displayname }}"
       mail: "{{ default_user_email }}"
     state: exact
+  register: result
+  retries: 5
+  delay: 1
+  until: result is not failed
