--- a/cluster/system/metallb/config.yaml
+++ b/cluster/system/metallb/config.yaml
@@ -8,3 +8,12 @@ spec:
   addresses:
     - 192.168.1.70-192.168.1.79
     # - 192.168.1.70/32
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: l2advertisement1
+  namespace: metallb-system
+spec:
+  ipAddressPools:
+    - worker-pool
