--- a/cluster/platform/389ds/service.yaml
+++ b/cluster/platform/389ds/service.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/instance: 389ds
     app.kubernetes.io/version: "2.1"
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 389
       targetPort: 3389
