--- a/cluster/platform/gitlab-runner/manifest.yaml
+++ b/cluster/platform/gitlab-runner/manifest.yaml
@@ -1,8 +1,9 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: gitlab-runner
+# Namespace created in K3s template
+# ---
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: gitlab-runner
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -11,7 +12,6 @@ metadata:
   namespace: gitlab-runner
   labels:
     app.kubernetes.io/name: gitlab-runner
-    app.kubernetes.io/version: v15.3.0
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -20,7 +20,6 @@ metadata:
   namespace: gitlab-runner
   labels:
     app.kubernetes.io/name: gitlab-runner
-    app.kubernetes.io/version: v15.3.0
 rules:
   - apiGroups: [""]
     resources: ["*"]
@@ -33,7 +32,6 @@ metadata:
   namespace: gitlab-runner
   labels:
     app.kubernetes.io/name: gitlab-runner
-    app.kubernetes.io/version: v15.3.0
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -44,25 +42,12 @@ subjects:
     namespace: gitlab-runner
 ---
 apiVersion: v1
-kind: Secret
-metadata:
-  name: gitlab-runner
-  namespace: gitlab-runner
-  labels:
-    app.kubernetes.io/name: gitlab-runner
-    app.kubernetes.io/version: v15.3.0
-type: Opaque
-data:
-  runner-registration-token: "R1IxMzQ4OTQxNHVBQ1ZhMVB0VGRMaUhzWFcxdnM="
----
-apiVersion: v1
 kind: ConfigMap
 metadata:
   name: gitlab-runner
   namespace: gitlab-runner
   labels:
     app.kubernetes.io/name: gitlab-runner
-    app.kubernetes.io/version: v15.3.0
 data:
   entrypoint: |
     #!/bin/bash
@@ -179,7 +164,6 @@ metadata:
   namespace: gitlab-runner
   labels:
     app.kubernetes.io/name: gitlab-runner
-    app.kubernetes.io/version: v15.3.0
 spec:
   replicas: 1
   revisionHistoryLimit: 10
@@ -190,7 +174,6 @@ spec:
     metadata:
       labels:
         app: gitlab-runner
-        version: 15.3.0
     spec:
       securityContext:
         fsGroup: 65533
@@ -199,7 +182,7 @@ spec:
       serviceAccountName: "gitlab-runner"
       containers:
         - name: gitlab-runner
-          image: registry.gitlab.com/gitlab-org/gitlab-runner:alpine-v15.3.0
+          image: registry.gitlab.com/gitlab-org/gitlab-runner:alpine-v15.4.0
           imagePullPolicy: "IfNotPresent"
           securityContext:
             allowPrivilegeEscalation: false
