--- a/templates/provisioning/roles/kubernetes/k3s-cluster/vars/main.yml
+++ b/templates/provisioning/roles/kubernetes/k3s-cluster/vars/main.yml
@@ -1,3 +1,4 @@
 ---
 k3s_kubevip_address: "{{ k3s.controller.load_balancer_ip }}"
 k3s_gitlab_agent_token: "{{ gitlab.agentToken }}"
+k3s_gitlab_runner_token: "{{ gitlab.runnerToken }}"
