Completely remove gitlab-agent from cluster

--- a/templates/provisioning/k3s-cluster.yml
+++ b/templates/provisioning/k3s-cluster.yml
@@ -7,4 +7,4 @@
   roles:
     - role: rhel8/timesync-ntp
     - role: rhel8/automatic-upgrades
-    - role: kubernetes/k3s-cluster
+    - role: k3s-cluster
