Add SSH auth config and fix resource ordering
- Added config options for SSH authentication via Terraform.
- Fixed resource ordering to improve apply-time reliability.

--- a/vars.template/secret.yml
+++ b/vars.template/secret.yml
@@ -8,16 +8,20 @@ proxmox:
   tlsInsecure: false
 
 gitlab:
-  agentToken: token-goes-here
   runnerToken: token-goes-here
 
 globalVars:
   net:
-    dnsServers: [ "1.1.1.1", "1.0.0.1" ]
+    dnsServers:
+      - 1.1.1.1
+      - 1.0.0.1
     domainRoot: homelab.internal
     gateway: 192.168.1.254
   ssh:
     pubKeyFile: ~/.ssh/id_ed25519.pub
+    useLocalAgent: true
+    # Must be set when useLocalAgent is false
+    # privateKeyFile: ~/.ssh/id_ed25519
   timezone: America/Vancouver
 
 dirsrv:
@@ -47,17 +51,26 @@ k3s:
     #  - Nodes must be given static IP addresses in CIDR notation.
     nodes:
       0:
-        ip_addr: 192.168.1.21
+        ip_addr: 192.168.1.21/24
         pve_node: pve1
         pve_storage_pool: local-zfs
+        cores: 4
+        vcpus: 4
+        memory: 4096
       # 1:
-      #   ip_addr: 192.168.1.22
+      #   ip_addr: 192.168.1.22/24
       #   pve_node: pve1
       #   pve_storage_pool: local-zfs
+      #   cores: 4
+      #   vcpus: 4
+      #   memory: 2048
       # 2:
-      #   ip_addr: 192.168.1.23
+      #   ip_addr: 192.168.1.23/24
       #   pve_node: pve1
       #   pve_storage_pool: local-zfs
+      #   cores: 4
+      #   vcpus: 4
+      #   memory: 2048
 
   # Define your worker nodes:
   #  - You must define a minimum of one node.
@@ -66,17 +79,23 @@ k3s:
   worker:
     nodes:
       0:
-        ip_addr: 192.168.1.31
+        ip_addr: 192.168.1.31/24
         pve_node: pve1
         pve_storage_pool: local-zfs
+        cores: 4
+        vcpus: 4
+        memory: 8192
       1:
-        ip_addr: 192.168.1.32
+        ip_addr: 192.168.1.32/24
         pve_node: pve1
         pve_storage_pool: local-zfs
+        cores: 4
+        vcpus: 4
+        memory: 8192
 
 pushover:
   # TODO: Implement enabled/disabled toggle
-  enabled: true
-  user_token: ""
+  # enabled: true
+  user_token: token-goes-here
   app_tokens:
-    k8s_host_upgrades: ""
+    k8s_host_upgrades: token-goes-here
