--- a/cluster/system/flux-cd/init-sync.yaml
+++ b/cluster/system/flux-cd/init-sync.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: master
-  url: https://github.com/ralgar/testing-aks.git
+    branch: flux-cd
+  url: https://github.com/ralgar/homelab.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
