Improve Ceph CSI deployment

--- a/cluster/system/ceph-csi/cephfs/storageclass.yaml
+++ b/cluster/system/ceph-csi/cephfs/storageclass.yaml
@@ -30,11 +30,11 @@ parameters:
   # kernelMountOptions: readdir_max_bytes=1048576,norbytes
 
   # The secrets have to contain user and/or Ceph admin credentials.
-  csi.storage.k8s.io/provisioner-secret-name: csi-cephfs-secret
+  csi.storage.k8s.io/provisioner-secret-name: ceph-secret
   csi.storage.k8s.io/provisioner-secret-namespace: ceph-csi
-  csi.storage.k8s.io/controller-expand-secret-name: csi-cephfs-secret
+  csi.storage.k8s.io/controller-expand-secret-name: ceph-secret
   csi.storage.k8s.io/controller-expand-secret-namespace: ceph-csi
-  csi.storage.k8s.io/node-stage-secret-name: csi-cephfs-secret
+  csi.storage.k8s.io/node-stage-secret-name: ceph-secret
   csi.storage.k8s.io/node-stage-secret-namespace: ceph-csi
 
   # (optional) The driver can use either ceph-fuse (fuse) or
