--- a/cluster/system/monitoring/loki-stack/release.yaml
+++ b/cluster/system/monitoring/loki-stack/release.yaml
@@ -9,7 +9,7 @@ spec:
     - name: kube-prometheus-stack
   chart:
     spec:
-      version: "2.x"
+      version: "2.8.4"
       chart: loki-stack
       sourceRef:
         kind: HelmRepository
