Add replicas transformer for Ceph CSI

--- a/cluster/system/ceph-csi/kustomization.yaml
+++ b/cluster/system/ceph-csi/kustomization.yaml
@@ -7,3 +7,6 @@ resources:
   - ceph-config.yaml
   - csi-config-map.yaml
   - cephfs/
+replicas:
+  - name: csi-cephfsplugin-provisioner
+    count: 1
