Fix: Increase kube-prometheus-stack timeout

--- a/cluster/system/monitoring/kube-prometheus-stack/release.yaml
+++ b/cluster/system/monitoring/kube-prometheus-stack/release.yaml
@@ -13,6 +13,7 @@ spec:
         kind: HelmRepository
         name: prometheus-community
       interval: 60m
+  timeout: 10m
   install:
     crds: Create
   upgrade:
